# easyda

./: Makefile  README.md  consts.py  main.py  pyproject.toml  user_ui.py
src/: consts.py  dataframe_analize.py  user_ui.py
